[GLIB] Unreviewed debug buildfix after r288872 https://bugs.webkit.org/show_bug.cgi?id=236036

* accessibility/atspi/AccessibilityAtspi.cpp:
(WebCore::AccessibilityAtspi::localizedRoleName):



Canonical link: https://commits.webkit.org/246709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288990 268f45cc-cd09-0410-ab3c-d52691b4dbfc